[package]
name = "pcmq"
version = "0.1.0"
edition = "2024"

[lib]
name = "pcmq"
path = "src/lib.rs"

[dependencies]
axum = "0.8.3"
r2d2 = "0.8.10"
r2d2_sqlite = "0.27.0"
rusqlite = "0.34.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
uuid = "1.16.0"
